package view;

public class MenuView {
    public void showMenu() {
        System.out.println("=== Menu ===");
        System.out.println("1. Nouvelle Partie");
        System.out.println("2. Scores");
        System.out.println("3. Quitter");
    }
}
